// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders filtered ListOfPosts correctly 1`] = `
<div>
  <div
    className="border p-2"
  >
    <p
      className="font-italic text-secondary p-0 m-0"
    >
      Tue Feb 02
    </p>
    <p
      className="display-4 cursor"
      onClick={[Function]}
    >
      Leviathan Wakes
    </p>
    <button
      className="btn btn-outline-dark btn-sm mb-2"
      onClick={[Function]}
    >
      by 
      Terry McDonough
    </button>
    <p>
      Summary: 
      Requieque et Satyri

Pasiphaeia Aeneaden

Lorem markdownum fiant amantior idemque fuit moraque,
      ...
    </p>
  </div>
  <div
    className="border p-2"
  >
    <p
      className="font-italic text-secondary p-0 m-0"
    >
      Tue Feb 02
    </p>
    <p
      className="display-4 cursor"
      onClick={[Function]}
    >
      Critical Mass
    </p>
    <button
      className="btn btn-outline-dark btn-sm mb-2"
      onClick={[Function]}
    >
      by 
      Terry McDonough
    </button>
    <p>
      Summary: 
      Arte quod cum Orphea et

Quae est esse magistra nam sententia aquae

Lorem markdownum lacrimaeq
      ...
    </p>
  </div>
  <div
    className="border p-2"
  >
    <p
      className="font-italic text-secondary p-0 m-0"
    >
      Tue Dec 15
    </p>
    <p
      className="display-4 cursor"
      onClick={[Function]}
    >
      The Big Empty
    </p>
    <button
      className="btn btn-outline-dark btn-sm mb-2"
      onClick={[Function]}
    >
      by 
      Terry McDonough
    </button>
    <p>
      Summary: 
      Famemque horrescere occasus neve

Ityosque oraque subvolat patetis

Lorem markdownum purpura Sc
      ...
    </p>
  </div>
  <div
    className="border p-2"
  >
    <p
      className="font-italic text-secondary p-0 m-0"
    >
      Mon Dec 14
    </p>
    <p
      className="display-4 cursor"
      onClick={[Function]}
    >
      Dulcinea
    </p>
    <button
      className="btn btn-outline-dark btn-sm mb-2"
      onClick={[Function]}
    >
      by 
      Terry McDonough
    </button>
    <p>
      Summary: 
      Omnibus quae

Sit sed inque teneris

Lorem markdownum adhuc securosque, suo ponto satae se adhu
      ...
    </p>
  </div>
</div>
`;

exports[`renders unfiltered ListOfPosts correctly 1`] = `
<div>
  <div
    className="border p-2"
  >
    <p
      className="font-italic text-secondary p-0 m-0"
    >
      Tue Feb 02
    </p>
    <p
      className="display-4 cursor"
      onClick={[Function]}
    >
      Leviathan Wakes
    </p>
    <button
      className="btn btn-outline-dark btn-sm mb-2"
      onClick={[Function]}
    >
      by 
      Terry McDonough
    </button>
    <p>
      Summary: 
      Requieque et Satyri

Pasiphaeia Aeneaden

Lorem markdownum fiant amantior idemque fuit moraque,
      ...
    </p>
  </div>
  <div
    className="border p-2"
  >
    <p
      className="font-italic text-secondary p-0 m-0"
    >
      Tue Feb 02
    </p>
    <p
      className="display-4 cursor"
      onClick={[Function]}
    >
      Critical Mass
    </p>
    <button
      className="btn btn-outline-dark btn-sm mb-2"
      onClick={[Function]}
    >
      by 
      Terry McDonough
    </button>
    <p>
      Summary: 
      Arte quod cum Orphea et

Quae est esse magistra nam sententia aquae

Lorem markdownum lacrimaeq
      ...
    </p>
  </div>
  <div
    className="border p-2"
  >
    <p
      className="font-italic text-secondary p-0 m-0"
    >
      Tue Jan 26
    </p>
    <p
      className="display-4 cursor"
      onClick={[Function]}
    >
      Salvage
    </p>
    <button
      className="btn btn-outline-dark btn-sm mb-2"
      onClick={[Function]}
    >
      by 
      Bill Johnson
    </button>
    <p>
      Summary: 
      In et illo

Movere ora terque baculum colebatur

Lorem markdownum solito, vocat nata corripuere
      ...
    </p>
  </div>
  <div
    className="border p-2"
  >
    <p
      className="font-italic text-secondary p-0 m-0"
    >
      Tue Jan 19
    </p>
    <p
      className="display-4 cursor"
      onClick={[Function]}
    >
      Windmills
    </p>
    <button
      className="btn btn-outline-dark btn-sm mb-2"
      onClick={[Function]}
    >
      by 
      Bill Johnson
    </button>
    <p>
      Summary: 
      Pingebat sive struxisse in manum certamen

Id umidus requies sustulerat trahebat Olympi confite
      ...
    </p>
  </div>
  <div
    className="border p-2"
  >
    <p
      className="font-italic text-secondary p-0 m-0"
    >
      Tue Jan 12
    </p>
    <p
      className="display-4 cursor"
      onClick={[Function]}
    >
      Rock Bottom
    </p>
    <button
      className="btn btn-outline-dark btn-sm mb-2"
      onClick={[Function]}
    >
      by 
      Rob Lieberman
    </button>
    <p>
      Summary: 
      Hoc ter enim serae centum

Animae innumeras habuisse ulla saepe

Lorem markdownum, nostrum fate
      ...
    </p>
  </div>
  <div
    className="border p-2"
  >
    <p
      className="font-italic text-secondary p-0 m-0"
    >
      Tue Jan 05
    </p>
    <p
      className="display-4 cursor"
      onClick={[Function]}
    >
      Back to the Butcher
    </p>
    <button
      className="btn btn-outline-dark btn-sm mb-2"
      onClick={[Function]}
    >
      by 
      Rob Lieberman
    </button>
    <p>
      Summary: 
      Loco Delonque corpore exspatiemur tenuisset media

Centum nec ducum nata solacia

Lorem markdow
      ...
    </p>
  </div>
  <div
    className="border p-2"
  >
    <p
      className="font-italic text-secondary p-0 m-0"
    >
      Tue Dec 29
    </p>
    <p
      className="display-4 cursor"
      onClick={[Function]}
    >
      CQB
    </p>
    <button
      className="btn btn-outline-dark btn-sm mb-2"
      onClick={[Function]}
    >
      by 
      Jeff Woolnough
    </button>
    <p>
      Summary: 
      Cinnama gelido

Vale lupi in moles laqueis verborum illis

Lorem markdownum inmemor et accipiun
      ...
    </p>
  </div>
  <div
    className="border p-2"
  >
    <p
      className="font-italic text-secondary p-0 m-0"
    >
      Tue Dec 22
    </p>
    <p
      className="display-4 cursor"
      onClick={[Function]}
    >
      Remember the Cant
    </p>
    <button
      className="btn btn-outline-dark btn-sm mb-2"
      onClick={[Function]}
    >
      by 
      Jeff Woolnough
    </button>
    <p>
      Summary: 
      Cuique scilicet cum minimo colentes quaterque si

Quoque parat ferarum ait lacusque

Lorem mark
      ...
    </p>
  </div>
  <div
    className="border p-2"
  >
    <p
      className="font-italic text-secondary p-0 m-0"
    >
      Tue Dec 15
    </p>
    <p
      className="display-4 cursor"
      onClick={[Function]}
    >
      The Big Empty
    </p>
    <button
      className="btn btn-outline-dark btn-sm mb-2"
      onClick={[Function]}
    >
      by 
      Terry McDonough
    </button>
    <p>
      Summary: 
      Famemque horrescere occasus neve

Ityosque oraque subvolat patetis

Lorem markdownum purpura Sc
      ...
    </p>
  </div>
  <div
    className="border p-2"
  >
    <p
      className="font-italic text-secondary p-0 m-0"
    >
      Mon Dec 14
    </p>
    <p
      className="display-4 cursor"
      onClick={[Function]}
    >
      Dulcinea
    </p>
    <button
      className="btn btn-outline-dark btn-sm mb-2"
      onClick={[Function]}
    >
      by 
      Terry McDonough
    </button>
    <p>
      Summary: 
      Omnibus quae

Sit sed inque teneris

Lorem markdownum adhuc securosque, suo ponto satae se adhu
      ...
    </p>
  </div>
</div>
`;
